--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,48 @@
-.calculator {
-    height: 1em;
-    width: 30em;
+body {
+    background-color: azure;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
 
+.calculator {
+    display: grid;
+    margin-top: 2rem;
+    grid-template-columns: repeat(4, 6rem);
+    grid-template-rows: minmax(7rem, auto) repeat(6, 6rem);
+    border-radius: 10rem;
+}
+
+.calculator>button {
+    font-size: 28px;
+}
+
+.button2 {
+    grid-column: span 2;
+}
+
+.output {
+    grid-column: span 4;
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    padding: 0.75rem;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.output .previous-operand {
+    font-size: 1.5rem;
+    color: white;
+    margin-left: auto;
+    margin-right: 1rem;
+}
+
+.output .current-operand {
+    font-size: 2.5rem;
+    color: white;
+    margin-left: auto;
+    margin-right: 1rem;
 }
